Bugfix: now a hamburger button is visible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -293,6 +293,7 @@ button:disabled {
     }
 
     .hamburger {
+        display: block;
         width: 25px;
         height: 3px;
         background-color: #4BD0A0;
